# Project2_2024-25

./: .gitignore
executables/: CMakeLists.txt  Custom_Constrained_Delaunay_triangulation_2.h  ant_colony.cpp  ant_colony.h  center.cpp  center.h  centroid.cpp  centroid.h  circumcenter.cpp  circumcenter.h  flipEdges.cpp  flipEdges.h  input.json  inputs.cpp  inputs.h  inside_convex_polygon_centroid.cpp  inside_convex_polygon_centroid.h  local_search.cpp  local_search.h  main.cpp  output.cpp  output.h  output.json  projection.cpp  projection.h  simulated_annealing.cpp  simulated_annealing.h  utils.cpp  utils.h
